--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-https://romantic-message.netlify.app
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8">
+  <title>Sana Bir Mesajım Var ❤️</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #ff5f6d, #ffc371);
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+    }
+    .card {
+      background: rgba(255,255,255,0.15);
+      padding: 30px;
+      border-radius: 20px;
+      text-align: center;
+      max-width: 400px;
+    }
+    h1 {
+      font-size: 28px;
+    }
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+    }
+    .heart {
+      font-size: 40px;
+      margin: 20px 0;
+      animation: beat 1.2s infinite;
+    }
+    @keyframes beat {
+      0%,100% { transform: scale(1); }
+      50% { transform: scale(1.2); }
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>Canım ❤️</h1>
+    <p>
+      Bu sayfayı sana özel hazırladım.<br>
+      Gülüşün günümü aydınlatıyor,<br>
+      varlığın bana huzur veriyor.
+    </p>
+    <div class="heart">💖</div>
+    <p>
+      Seni çok seviyorum.<br>
+      İyi ki varsın, iyi ki benimlesin.
+    </p>
+    <p><strong>— Muhammed</strong></p>
+  </div>
+</body>
+</html>
