--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sana Bir Mesajım Var ❤️</title>
+  <title>MINNOSUMA SÜRPRİZ ❤️</title>
   <style>
     body {
       margin: 0;
@@ -68,6 +67,10 @@
     </footer>
   </div>
     <!-- Müzik: Benimle Kayboldun (YouTube embed) -->
-  <iframe width="0" height="0" src="https://www.youtube.com/embed/VIDEO_ID?autoplay=1&loop=1&playlist=VIDEO_ID" title="Benimle Kayboldun" frameborder="0" allow="autoplay"></iframe>
+    <!-- Arka plan müziği: Aşk temalı keman (telif sorunsuz) -->
+  <audio autoplay loop>
+    <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_5c8c8b5f2a.mp3" type="audio/mpeg">
+    Tarayıcınız müzik çalmayı desteklemiyor.
+  </audio>
 </body>
 </html>
