--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MINNOSUMA SÜRPRİZ ❤️</title>
+  <title> minnosuma sürprizz❤️</title>
   <style>
     body {
       margin: 0;
@@ -68,9 +68,11 @@
   </div>
     <!-- Müzik: Benimle Kayboldun (YouTube embed) -->
     <!-- Arka plan müziği: Aşk temalı keman (telif sorunsuz) -->
-  <audio autoplay loop>
+    <!-- Arka plan müziği: Aşk temalı keman (buton ile kontrol) -->
+  <audio id="bgMusic" loop>
     <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_5c8c8b5f2a.mp3" type="audio/mpeg">
-    Tarayıcınız müzik çalmayı desteklemiyor.
   </audio>
+
+  <button id="musicBtn" onclick="toggleMusic()" style="position:fixed;bottom:20px;right:20px;padding:12px 18px;border:none;border-radius:30px;background:#ffffffcc;c
 </body>
 </html>
