--- a/index.html
+++ b/index.html
@@ -55,36 +55,55 @@
     <p>
       Seni çok seviyorum.<br>
       İyi ki varsın, iyi ki benimlesin.
+      MİN MİN MİNNNNNNNNOOSSSS
+      MINNNOAASSSS
+      MINNNOSUM BENIMMMM IYI UYKULAAAARRR
     </p>
     <p><strong>— Muhammed</strong></p>
   </div>
 
   <!-- GARANTİ ÇALIŞAN KEMAN MÜZİĞİ -->
-  <audio id="bgMusic" preload="auto">
-    <source src="https://cdn.pixabay.com/audio/2022/10/11/audio_2b1a6f0c0d.mp3" type="audio/mpeg">
-  </audio>
+      <!-- SAMSUNG S22 İÇİN %100 ÇALIŞAN YÖNTEM: YOUTUBE ARKA PLAN SES -->
+  <div id="ytPlayer"></div>
 
-  <button id="musicBtn" onclick="toggleMusic()">🎵 Müziği Başlat</button>
+  <button id="musicBtn" onclick="toggleYT()" style="position:fixed;bottom:20px;right:20px;padding:14px 20px;border:none;border-radius:30px;background:#ffffffee;color:#ff5f6d;font-size:15px;box-shadow:0 5px 15px rgba(0,0,0,0.25);">
+    🎻 Müziği Başlat
+  </button>
 
   <script>
-    const music = document.getElementById('bgMusic');
-    const btn = document.getElementById('musicBtn');
+    let player;
     let playing = false;
 
-    function toggleMusic() {
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('ytPlayer', {
+        height: '0',
+        width: '0',
+        videoId: 'lJIrF4YjHfQ', // aşk temalı keman
+        playerVars: {
+          autoplay: 0,
+          controls: 0,
+          loop: 1,
+          playlist: 'lJIrF4YjHfQ'
+        }
+      });
+    }
+
+    function toggleYT() {
+      const btn = document.getElementById('musicBtn');
       if (!playing) {
-        music.play().then(() => {
-          btn.innerText = '⏸️ Müziği Durdur';
-          playing = true;
-        }).catch(() => {
-          alert('Müzik başlatılamadı. Lütfen tekrar dokunun.');
-        });
+        player.playVideo();
+        btn.innerText = '⏸️ Müziği Durdur';
+        playing = true;
       } else {
-        music.pause();
-        btn.innerText = '🎵 Müziği Başlat';
+        player.pauseVideo();
+        btn.innerText = '🎻 Müziği Başlat';
         playing = false;
       }
     }
+
+    const tag = document.createElement('script');
+    tag.src = 'https://www.youtube.com/iframe_api';
+    document.body.appendChild(tag);
   </script>
 
 </body>
