--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sevgiline Mesaj</title>
+<title>Sevgiline Mesaj ❤️</title>
 <style>
 body {
   margin:0;
@@ -65,7 +65,7 @@ let playing = false;
 
 btn.addEventListener("click", () => {
     if(!playing){
-        music.play(); // direkt senkron tetikleme
+        music.play(); // direkt tetikleme, mobil uyumlu
         playing = true;
         btn.textContent = "🎻 Müziği Durdur";
     } else {
