--- a/index.html
+++ b/index.html
@@ -3,76 +3,48 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sevgiline Mesaj ❤️</title>
+<title>Senin İçin Bir Şarkı ❤️</title>
 <style>
-body {
-  margin:0;
-  font-family:Arial,sans-serif;
-  background:linear-gradient(135deg,#ff5f6d,#ffc371);
-  min-height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  color:white;
-}
-.card {
-  background: rgba(255,255,255,0.18);
-  backdrop-filter:blur(10px);
-  border-radius:20px;
-  padding:30px;
-  max-width:420px;
-  text-align:center;
-  box-shadow:0 20px 40px rgba(0,0,0,0.2);
-}
-h1{font-size:28px;}
-p{font-size:18px;line-height:1.6;}
-.heart{font-size:40px;animation:beat 1.2s infinite;margin:20px 0;}
-@keyframes beat{0%,100%{transform:scale(1);}50%{transform:scale(1.2);}}
-#musicBtn{
-  position:fixed;
-  bottom:20px;
-  right:20px;
-  padding:14px 20px;
-  border:none;
-  border-radius:30px;
-  background:#ffffffee;
-  color:#ff5f6d;
-  font-size:15px;
-  box-shadow:0 5px 15px rgba(0,0,0,0.25);
-}
+  body { margin:0; font-family:Arial,sans-serif; background:#000; color:#fff; text-align:center; padding-top:50px;}
+  #musicBtn { padding:15px 25px; font-size:18px; background:#ff5f6d; color:white; border:none; border-radius:8px; cursor:pointer;}
+  #ytPlayer { display:none; }
 </style>
 </head>
 <body>
 
-<div class="card">
 <h1>Canım ❤️</h1>
-<p>Bu sayfayı sana özel hazırladım.<br>
-Gülüşün günümü aydınlatıyor,<br>
-varlığın bana huzur veriyor.</p>
-<div class="heart">💖</div>
-<p>Seni çok seviyorum.<br>
-İyi ki varsın, iyi ki benimlesin.</p>
-<p><strong>— Muhammed</strong></p>
-</div>
+<p>Senin için çalan şarkı:</p>
+<button id="musicBtn">🎵 Şarkıyı Çal</button>
 
-<button id="musicBtn">🎻 Müziği Başlat</button>
+<div id="ytPlayer"></div>
 
 <script>
-const btn = document.getElementById("musicBtn");
-const music = new Audio("music.mp3"); // repo içindeki MP3
-music.loop = true;
+// YouTube API yükle
+var tag = document.createElement('script');
+tag.src = "https://www.youtube.com/iframe_api";
+document.body.appendChild(tag);
+
+let player;
 let playing = false;
 
-btn.addEventListener("click", () => {
-    if(!playing){
-        music.play(); // mobil ve masaüstü uyumlu
-        playing = true;
-        btn.textContent = "🎻 Müziği Durdur";
-    } else {
-        music.pause();
-        playing = false;
-        btn.textContent = "🎻 Müziği Başlat";
-    }
+function onYouTubeIframeAPIReady() {
+  player = new YT.Player('ytPlayer', {
+    height: '0', width: '0',
+    videoId: 'b1bsO_EwAPY',  // Kaan Boşnak - Benimle Kayboldun resmi video ID’si :contentReference[oaicite:1]{index=1}
+    playerVars: { autoplay: 0, controls: 0 }
+  });
+}
+
+document.getElementById("musicBtn").addEventListener("click", () => {
+  if (!playing && player) {
+    player.playVideo();
+    playing = true;
+    document.getElementById("musicBtn").textContent = "⏸️ Durdur";
+  } else if (player) {
+    player.pauseVideo();
+    playing = false;
+    document.getElementById("musicBtn").textContent = "🎵 Çal";
+  }
 });
 </script>
 
